# bpp_plugin.import_sgsp

./: .gitignore  Makefile  README.rst  pyproject.toml  pytest.ini  rebuild.sh
.github/workflows/: test.yml
sql/: upgrade_cia_tables.sql
src/bpp_plugins/import_sgsp/: admin.py  apps.py  core.py  models.py
src/bpp_plugins/import_sgsp/management/commands/: import_sgsp_db.py  ustaw_nadrzedne_osieroconym_rozdzialom_po_isbn.py
src/bpp_plugins/import_sgsp/tests/: test_db_extra_schema.sql  tests.py
