[tool.poetry]
name = "import_sgsp"
version = "0.1.0"
description = "Plugin do BPP realizujący import bazy danych SGSP"
authors = ["Michał Pasternak <michal.dtz@gmail.com>"]
readme = "README.rst"
packages = [
         {include = "bpp_plugins/import_sgsp", from="src"}
         ]

[tool.poetry.dependencies]
python = ">=3.10"
bpp-iplweb = ">=202307.1104"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
